plugins/mermaid/plugin/src/test/resources/intention/gitgraph/cherry-pick.mermaid
gitGraph
  cherry-pick id: "<error descr="Commit id does not exist">123</error>"